# src/views/terms.py
@@ -6,3 +6,9 @@ def create_references():
     return 'create_references'
 
 
+def get_collections():
+    pass
+
+
+def create_collections():
+    pass
